@@ -1,1 +1,3 @@
 Mini Projet SCRUM
+
+--module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
